Issue #12515: Support the latest pattern matching syntax in switch labels